yaml/app/athena-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athena-app
  namespace: athena-app
  labels:
    app: athena
    role: frontend
spec:
  selector:
    matchLabels:
      app: athena
      role: frontend
  template:
    metadata:
      labels:
        app: athena
        role: frontend
    spec:
      serviceAccountName: athena-service-account
      containers:
        - name: athena-app
          image: # APP IMAGE NAME
          ports:
            - containerPort: 80
          volumeMounts:
          # This volume stores the secrets needed for Google API access
          - name: cred
            mountPath: "/etc/athena/.data"
            readOnly: true
          - name: templates
            mountPath: "/etc/athena/Templates"
      volumes:
      - name: cred
        secret:
          secretName: google-cred
          items:
          - key: sa_client_email
            path: ce
            mode: 0400
          - key: sa_private_key
            path: pk
            mode: 0400
          - key: oauth_client_id
            path: ci 
            mode: 0400
          - key: oauth_client_secret
            path: cs
            mode: 0400
      - name: templates
        persistentVolumeClaim:
          claimName: templates-claim
