yaml/app/athena-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: athena-app
  namespace: athena-app
  labels:
    app: athena
    role: frontend
spec:
  selector:
    app: athena
    role: frontend
  ports:
    - port: 80
      targetPort: 80
