yaml/app/athena-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: athena-db
  labels:
    app: athena
    role: database
spec:
  selector:
    app: athena
    role: database
  ports:
    - port: 1433
      targetPort: 1433
